--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=2.0" />
     <link rel="stylesheet" href="style/style.css" />
-    <link rel="stylesheet" href="./style/mobile.css">
+    <link rel="stylesheet" href="./style/mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
@@ -16,35 +16,64 @@
       href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Siyad</title>
   </head>
   <body>
-    </div>
     <!-- Navbar -->
     <nav>
       <div class="nav_button"></div>
     </nav>
     <!-- Name -->
-    <div class="home">
-      <h1 id="name">Siyad</h1>
-      <div id="image"><img src="./images/mainPotrait.png" alt="potrait" /></div>
-    </div>
-      <div class="edu">
-        <h1>Education</h1>
-        <section class="college">
-          <h1 class="title">College</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam ea,
-            perferendis quod facilis saepe quos rerum! Vero cumque quas saepe.
-          </p>
+    <div class="container">
+      <section class="home page">
+        <h1 id="name">Siyad</h1>
+        <div id="image">
+          <img src="./images/mainPotrait.png" alt="potrait" />
+        </div>
+      </section>
+
+      <section class="edu page">
+        <header><h1>Education</h1></header>
+        <section class="hsc exam">
+          <h1 class="title">HSC</h1>
+          <div class="line"></div>
+          <div class="discription">
+            <ul>
+              <li>
+                <span class="bold">Institution:</span> Government Ananda Mohan
+                College
+              </li>
+              <li><span class="bold">Batch:</span> 2020-2022</li>
+            </ul>
+          </div>
         </section>
-        <section class="SSC">
+        <section class="ssc exam">
           <h1 class="title">SSC</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam ea,
-            perferendis quod facilis saepe quos rerum! Vero cumque quas saepe.
-          </p>
+          <div class="line"></div>
+          <div class="discription">
+            <ul>
+              <li>
+                <span class="bold">Institution:</span> Agriculture University
+                High School
+              </li>
+              <li><span class="bold">Batch:</span> 2018-2020</li>
+            </ul>
+          </div>
         </section>
-      </div>
+        <section class="jsc exam">
+          <h1 class="title">JSC</h1>
+          <div class="line"></div>
+          <div class="discription">
+            <ul>
+              <li>
+                <span class="bold">Institution:</span> Agriculture University
+                High School
+              </li>
+              <li><span class="bold">Batch:</span> 2017</li>
+            </ul>
+          </div>
+        </section>
+      </section>
+    </div>
   </body>
 </html>
